--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "bailangzhan/yii2-webuploader": "^1.1",
-        "kucha/ueditor": "^1.21"
+        "kucha/ueditor": "^1.21",
+        "liyuze/yii2-ztree": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
