--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "kucha/ueditor": "^1.21",
         "liyuze/yii2-ztree": "^1.0",
         "creocoder/yii2-nested-sets": "^0.9.0",
-        "dmstr/yii2-adminlte-asset": "^2.6"
+        "dmstr/yii2-adminlte-asset": "^2.6",
+        "mdmsoft/yii2-admin": "~2.0",
+        "kartik-v/yii2-widget-datetimepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
