--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "creocoder/yii2-nested-sets": "^0.9.0",
         "dmstr/yii2-adminlte-asset": "^2.6",
         "mdmsoft/yii2-admin": "~2.0",
-        "kartik-v/yii2-widget-datetimepicker": "*"
+        "kartik-v/yii2-widget-datetimepicker": "*",
+        "mrgoon/aliyun-sms": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
