--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "dmstr/yii2-adminlte-asset": "^2.6",
         "mdmsoft/yii2-admin": "~2.0",
         "kartik-v/yii2-widget-datetimepicker": "*",
-        "mrgoon/aliyun-sms": "dev-master"
+        "mrgoon/aliyun-sms": "dev-master",
+        "flyok666/yii2-qiniu": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
